update the the system

--- a/src/app/adminassigntask/adminassigntask.component.html
+++ b/src/app/adminassigntask/adminassigntask.component.html
@@ -33,7 +33,7 @@
 
                     <li class="" id="breadcrumbpadding"><a class="" id="hover" routerLink="/adminpage">View Requests</a>
                     </li>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Assign Tasks</a></li>
+                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Assign Request</a></li>
                 </ul>
             </nav>
         </div>
@@ -61,7 +61,7 @@
 
 
                     <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">View
-                        Available Technician</h1>
+                        Available Artisans</h1>
                     <table class="table">
                         <thead class="thead-dark">
                             <tr>
