--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -29,8 +29,8 @@
         <div class="sideNav">
             <nav class="breadcrumbNav">
                 <ul>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Logs</a></li>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Close Logs</a></li>
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Requests</a></li>
+                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Close Requests</a></li>
                     
                         
                 </ul>
@@ -56,11 +56,11 @@
                     <div class="content card ">
 
                 
-                        <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin Close Logs</h1>
+                        <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin Close Requests</h1>
                         <table class="table">
                             <thead class="thead-dark">
                               <tr>
-                                <th scope="col">Log Ref</th>
+                                <th scope="col">Requests Reference</th>
                                 <th scope="col">Staff Name</th>
                                 <th scope="col">Staff-Feedback</th>
                                 <th scope="col">Artisan Status</th>
