--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -61,7 +61,7 @@
                 <div class="content card ">
 
                   
-                    <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Request</h1>
+                    <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Requests</h1>
                             <table class="table">
                                 <thead class="thead-dark">
                                 <tr>
