--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -58,7 +58,7 @@
                         
                     </div>
               
-                </div>
+                  </div>
                     
                     <div class="content card">
                         <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179); ">Admin View Progress</h1>
@@ -67,7 +67,7 @@
                                 <nav class="navtab">
                                   <div class="nav nav-tabs progressBtns" id="nav-tab" role="tablist">
                                     <button class="nav-link  active colorAmber" id="nav-in-progress-tab" data-bs-toggle="tab" data-bs-target="#nav-in-progress" type="button" role="tab" aria-controls="nav-in-progress" aria-selected="true">In-progress</button>
-                                    <button class="nav-link  colorRed" id="nav-done-tab" data-bs-toggle="tab" data-bs-target="#nav-done" type="button" role="tab" aria-controls="nav-done" aria-selected="false">Done</button>
+                                    <button class="nav-link  colorGreen" id="nav-done-tab" data-bs-toggle="tab" data-bs-target="#nav-done" type="button" role="tab" aria-controls="nav-done" aria-selected="false">Done</button>
       
                                   </div>
                                 </nav>
