--- a/src/app/staffsendrequest/staffsendrequest.component.html
+++ b/src/app/staffsendrequest/staffsendrequest.component.html
@@ -127,6 +127,8 @@
                                 class="btnSubmit  px-3 rounded-3">
                                 Submit
                             </button>
+
+                            <a type="submit" class="btnSubmit  px-3 rounded-3" id="btnQRcode" routerLink='/qr-code'>ScanQR code</a>
                         </div>
     
                         <div class="d-block text-end">
