--- a/public/app/form/form.component.html
+++ b/public/app/form/form.component.html
@@ -1,12 +1,17 @@
 <div>
   <div>
     <div class="body">
+
       <form method="POST" class="w-543px h-383px rounded-1 p-4 border bg-white" action="#"
         enctype="multipart/form-data">
+
+        
         <button id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
         <br>
+        
         <label class="d-block mb-4">
           <span class="form-label d-block" class="row mx-0 justify-content-center">Staff Number</span>
+          <h1>TEXT</h1>
           <br>
           <input [(ngModel)]="staffLogin.staff_id" name="staffLogin.staff_id" type="text" class="form-control"
             placeholder="Enter Staff Number" />
