--- a/src/app/staffsendrequest/staffsendrequest.component.html
+++ b/src/app/staffsendrequest/staffsendrequest.component.html
@@ -128,7 +128,7 @@
                                 Submit
                             </button>
 
-                            <a type="submit" class="btnSubmit  px-3 rounded-3" id="btnQRcode" routerLink='/qr-code'>ScanQR code</a>
+                            <!-- <a type="submit" class="btnSubmit  px-3 rounded-3" id="btnQRcode" routerLink='/qr-code'>ScanQR code</a> -->
                         </div>
     
                         <div class="d-block text-end">
