--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -63,6 +63,9 @@
                 
                         <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Artisan View Task</h1>
 
+                        <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="value1">
+                          <strong>{{value1}}</strong>
+                      </div>
                         
                         <table class="table">
                             <thead class="thead-dark">
