--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -65,6 +65,8 @@
 
                         <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="value1">
                           <strong>{{value1}}</strong>
+                          <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                          aria-label="Close"></button>
                       </div>
                         
                         <table class="table">
