--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -63,7 +63,7 @@
                                 <th scope="col">Requests Reference</th>
                                 <th scope="col">Staff Name</th>
                                 <th scope="col">Staff-Feedback</th>
-                                <th scope="col">Artisan Status</th>
+                                <th scope="col">Artisan Progress Status</th>
                                 <th scope="col">Close</th>
                               </tr>
                             </thead>
@@ -72,7 +72,7 @@
                                 <td>{{data.id}}</td>
                                 <td>{{data.description}}</td>
                                 <td>{{data.staff_feedback}}</td>
-                                <td class="status">{{data.status}}</td>
+                                <td class="status">{{data.progress}}</td>
                                 <td><button type="button" class="logbtn " (click)="log($event,data.id)" [(ngModel)]="data.status">Log</button> </td>
                               </tr>
                             </tbody>
