--- a/src/app/hodlogin-page/hodlogin-page.component.html
+++ b/src/app/hodlogin-page/hodlogin-page.component.html
@@ -1,50 +1,49 @@
-<div >
-    <div>
-        <div class="body">
-          <form
-          
-            method="POST"
-            class="w-543px h-383px rounded-1 p-4 border bg-white"
-            enctype="multipart/form-data">
-            <button id="b12" type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
-            <br>
-          
-            <label class="d-block mb-4">
-              <span class="form-label d-block" class="row mx-0 justify-content-center">HOD Number</span>
-              <br>
-              <input
-              [(ngModel)]="HODlogin.hod_id" name="HODlogin.hod_id"
-                type="text"
-                class="form-control"
-                placeholder="Enter Number"
-              />
-            </label>
-  
-            <label class="d-block mb-4">
-              <span class="form-label d-block" class="row mx-0 justify-content-center">Password</span>
-              <br>
-              <input
-              [(ngModel)]="HODlogin.password" name="HODlogin.password"
-                type="text"
-                class="form-control"
-                placeholder="Enter Password"
-              />
-            </label>
+
     
-            
-          
-    
-            <div class="mb-3 row mx-0 justify-content-center">
-              <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="HOD_login()" >
-                Submit
-              </button>
-            </div>
-    
-            <div class="d-block text-end">
+    <div class="container-fluid">
+
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-4 mt-4">
+      <button id="b12" type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
+      </div>
+
+      <div class="row ">
+          <div class="col-md-3">
+           
+          </div>
+          <div class="col-md-6 ">
               
-            </div>
   
-          </form>
-        </div>
+              <form method="POST" class="mt-4" enctype="multipart/form-data">
+              
+                <h1 class="text-success text-center">Welcome to technical service</h1>
+                <br>
+                  <h3 class="text-primary text-center mb-3"> HOD Login</h3>
+  
+                 
+                    <div class="form-floating mb-3">
+                      <input type="text" class="form-control" id="floatingInput"  [(ngModel)]="HODlogin.hod_id" name="HODlogin.hod_id" placeholder="HOD Number">
+                      <label for="floatingInput">HOD Number</label>
+                    </div>
+                    <div class="form-floating">
+                      <input type="password" class="form-control" id="floatingPassword"  [(ngModel)]="HODlogin.password" name="HODlogin.password" placeholder="Password">
+                      <label for="floatingPassword">Password</label>
+                    </div>
+  
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mt-4">
+                      <button type="button" (click)="HOD_login()" class="btn btn-outline-success">Login</button>
+  
+                    </div>
+  
+                    
+              </form>
+          </div>
+          <div class="col-md-3">
+              
+          </div>
       </div>
     </div>
+ 
+
+
+
+
