--- a/src/app/techlogin/techlogin.component.html
+++ b/src/app/techlogin/techlogin.component.html
@@ -1,55 +1,57 @@
-<div >
-  <div>
-      <div class="body">
-        <form
-          method="POST"
-          class="w-543px h-383px rounded-1 p-4 border bg-white"
-          action="#"
-          enctype="multipart/form-data"
-          >
-          <button id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
-          <br>
-          <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Technician Number</span>
-            <br>
-            <input
-            [(ngModel)]="techLogin.tech_id" name="techLogin.email"
-           
-              type="text"
-              class="form-control"
-              placeholder="214412845"
-            />
-          </label>
 
-          <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Password</span>
-            <br>
-            <input
-            [(ngModel)]="techLogin.password" name="techLogin.password"
-            
-              type="password"
-              class="form-control"
-              placeholder="Password"
-            />
-          </label>
-  
-          
-        
-  
-          <div class="mb-3 row mx-0 justify-content-center">
-            <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="tech_login()">
-              Submit
-            </button>
-          </div>
-  
-          <div class="d-block text-end">
-            
-          </div>
 
-        </form>
-      </div>
+
+
+  
+    
+  <div class="container-fluid">
+
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-4 mt-4">
+    <button id="b12" type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
+    </div>
+
+    <div class="row ">
+        <div class="col-md-3">
+         
+        </div>
+        <div class="col-md-6 ">
+            
+
+            <form method="POST" class="mt-4" enctype="multipart/form-data">
+            
+              <h1 class="text-primary text-center">Welcome to technical service</h1>
+              <br>
+                <h3 class="text-warning text-center mb-3"> HOD Login</h3>
+
+               
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" [(ngModel)]="techLogin.tech_id" name="techLogin.email" placeholder="Technician Number">
+                    <label for="floatingInput">Technician Number</label>
+                  </div>
+                  <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" [(ngModel)]="techLogin.password" name="techLogin.password" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                  </div>
+
+                  <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mt-4">
+                    <button type="button" (click)="tech_login()" class="btn btn-outline-success">Login</button>
+
+                  </div>
+
+                  
+            </form>
+        </div>
+        <div class="col-md-3">
+            
+        </div>
     </div>
   </div>
+
+
+
+
+
+
 
 
 
