update login ui

--- a/src/app/techlogin/techlogin.component.html
+++ b/src/app/techlogin/techlogin.component.html
@@ -19,9 +19,9 @@
 
             <form method="POST" class="mt-4" enctype="multipart/form-data">
             
-              <h1 class="text-primary text-center">Welcome to technical service</h1>
+              <h1 class="text-success text-center">Welcome to technical service</h1>
               <br>
-                <h3 class="text-warning text-center mb-3"> HOD Login</h3>
+                <h3 class="text-primary text-center mb-3"> Technician Login</h3>
 
                
                   <div class="form-floating mb-3">
