--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -11,7 +11,7 @@
               <div id="menu-icon">
                   <i class="fas fa-bars"></i>
               </div>
-              <ul>
+              <!-- <ul>
                 <div class="dropdown">
                   <button class="dropbtn">REQUEST</button>
                   <div class="dropdown-content">
@@ -28,8 +28,16 @@
                     <a class="nav-link active" id="ModalExample" (click)="openTech()">TECHNICIAN</a>
                   </li>
                   
-              </ul>
-      
+              </ul> -->
+              <div class="dropdown">
+                <button class="dropbtn">Sign In</button>
+                <div class="dropdown-content">
+                  <a class="nav-link active" id="ModalExample" (click)="openForm()">Log Complaint</a>
+                  <a class="nav-link active" id="ModalExample" (click)="openLogin()">ADMIN</a>
+                  <a class="nav-link active" id="ModalExample" (click)="openHOD()">HOD</a>
+                  <a class="nav-link active" id="ModalExample" (click)="openTech()">TECHNICIAN</a>
+                </div>
+              </div>
           </nav>
       </div>
 </div>
