--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -49,11 +49,11 @@
 <!-- <body class="container"> -->
    
 
-
+<body>
    
 <div id="banner">
-    <h1>Technical Services</h1>
-    <h3>We Can Help You Fix All Of Your Technical Problems</h3>
+    <h1>TECHNICAL SERVICES</h1>
+    <!-- <h3>We Can Help You Fix All Of Your Technical Problems</h3> -->
 </div> 
     <section id="about">
       <div id="about-text">
@@ -67,11 +67,11 @@
           Regardless of of such, they are innefective. The Technical Services System aims to improve/help employees in an orgarnisation solve
         technical difficulties effectively. Thus improving productivity in orgarnisations.</p>
       </div> 
-      <div class="about-img"><img src="../../../assets/images/footer.png"  style="height: 500px;width: 400px;"></div>
+      <div class="about-img"><img src="../../../assets/images/footer.png"  style="height: 350px;width: 250px;"></div>
     </section>
     
     
-    
+  </body>
     
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
     </footer>
