--- a/src/app/staffpage/staffpage.component.html
+++ b/src/app/staffpage/staffpage.component.html
@@ -150,7 +150,8 @@
 
                    
     
-                        <div class="mb-3">
+                        <div class="mb-3 
+                        d-flex justify-content-centre">
                             <button type="submit" (click)="clear()" (click)="request()"
                                 class="btn btn-primary px-3 rounded-3">
                                 Submit
